Add css for recipe and food response area

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                     <div id="search-area">
                         <input id="searchbox" type="text" placeholder="Enter food">
                         <button id="search">Search</button>
-                        e.g. "coffee and croissant" or "chicken enchilada"
+                        e.g. "coffee and croissant" or "chicken"
                     </div>
                     <recipes>
-                        <div id='listed-recipes'></div>
+                        <div id='listed-recipes'>Recipes</div>
                     </recipes>
                     <nutrient-info>
-                        <div id='listed-nutrients'></div>
+                        <div id='listed-nutrients'>Food Info</div>
                     </nutrient-info>
                 </main>
         </body>
