Make recipes display json

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
                         e.g. "coffee and croissant" or "chicken"
                     </div>
                     <recipes>
-                        <div id='listed-recipes'>Recipes</div>
+                        Recipes
+                        <div id='listed-recipes'></div>
                     </recipes>
                     <nutrient-info>
-                        <div id='listed-nutrients'>Food Info</div>
+                        Nutrient Info
+                        <div id='listed-nutrients'></div>
                     </nutrient-info>
                 </main>
         </body>
