--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         e.g. "coffee and croissant" or "chicken"
                     </div>
                     <recipes>
-                        Recipes
+                        <h3>Recipes<br></h3>
                         <div id='listed-recipes'></div>
                     </recipes>
                 </main>
