Fix spacing and text overlap issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         e.g. "coffee and croissant" or "chicken"
                     </div>
                     <recipes>
-                        <h3>Recipes<br></h3>
+                        <h3><u>Recipes</u></h3>
                         <div id='listed-recipes'></div>
                     </recipes>
                 </main>
